src/test/deca/syntax/invalid/bas_var_list.deca
// Resultats :
// Erreur contextuelle
// Ligne 2 : déclaration de variable mal formée

int a, , b;
